p0debuglog.txt
 
 gcc ./p0original.c
./p0original.c: In function ‘main’:
./p0original.c:6:16: error: ‘name’ undeclared (first use in this function
 
 gcc -g p0original.c
p0original.c: In function ‘main’:
p0original.c:6:11: warning: format ‘%d’ expects argument of type ‘int *’, but argument 2 has type ‘char (*)[50]’ [-Wformat=]
   scanf("%d", &a);
          ~^   ~~
p0original.c:8:10: warning: ‘return’ with a value, in function returning void
   return 0;
          ^
p0original.c:2:6: note: declared here
 void main()
      ^~~~
 gcc -g p0original.c
p0original.c: In function ‘main’:
p0original.c:6:11: warning: format ‘%s’ expects argument of type ‘char *’, but argument 2 has type ‘char (*)[50]’ [-Wformat=]
   scanf("%s", &a);
          ~^   ~~
 gcc -g p0original.c
 gcc -g p0original.c
 gdb a.out
GNU gdb (Ubuntu 8.1.1-0ubuntu1) 8.1.1
Copyright (C) 2018 Free Software Foundation, Inc.
License GPLv3+: GNU GPL version 3 or later <http://gnu.org/licenses/gpl.html>
This is free software: you are free to change and redistribute it.
There is NO WARRANTY, to the extent permitted by law.  Type "show copying"
and "show warranty" for details.
This GDB was configured as "x86_64-linux-gnu".
Type "show configuration" for configuration details.
For bug reporting instructions, please see:
<http://www.gnu.org/software/gdb/bugs/>.
Find the GDB manual and other documentation resources online at:
<http://www.gnu.org/software/gdb/documentation/>.
For help, type "help".
Type "apropos word" to search for commands related to "word"...
Reading symbols from a.out...done.
(gdb) b main
Breakpoint 1 at 0x772: file p0original.c, line 3.
(gdb) r
Starting program: /home/runner/pps-test1-bodduharshitha/a.out 
warning: Error disabling address space randomization: Operation not permitted

Breakpoint 1, main () at p0original.c:3
3   {
(gdb) n
5     printf ("Enter your name:");
(gdb) n
6     scanf("%s", a);
(gdb) n
Enter your name:wonderwoman 
7     printf("%s\n",a);
(gdb) n
wonderwoman
8     return 0;
(gdb) v
Undefined command: "v".  Try "help".
(gdb) c
Continuing.
[Inferior 1 (process 164) exited normally]
(gdb) Quit
